subprojects{
	group = 'org.diagramsascode'
	version = '0.0.1.0-SNAPSHOT'
	
	apply plugin: 'java'
	apply plugin: 'signing'
	apply plugin: 'maven-publish'
	apply plugin: 'eclipse'
	apply plugin: "jacoco"
	
	compileJava {
	  sourceCompatibility = '1.8'
	  targetCompatibility = '1.8'
	}
	
	repositories {
		mavenCentral()
		maven {
            url "https://oss.sonatype.org/content/repositories/snapshots/"
        }
	}
	
	dependencies {
		testImplementation("org.junit.jupiter:junit-jupiter-api:5.7.1")
		testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.7.1")
	}

	test {
		useJUnitPlatform()
	}
}
